--- a/app/src/main/res/layout/item_look_chart.xml
+++ b/app/src/main/res/layout/item_look_chart.xml
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" >
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/item_look_chart_cover_img_iv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -73,7 +73,7 @@
 
     </LinearLayout>
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/item_look_chart_play_iv"
         android:layout_width="35dp"
         android:layout_height="35dp"
