--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/login_close_iv"
         android:layout_width="30dp"
         android:layout_height="30dp"
@@ -14,7 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/login_flo_logo_iv"
         android:layout_width="80dp"
         android:layout_height="30dp"
@@ -83,7 +83,7 @@
         app:layout_constraintStart_toEndOf="@+id/login_middle_tv"
         app:layout_constraintEnd_toStartOf="@id/login_email_select_iv"/>
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/login_email_select_iv"
         android:layout_width="20dp"
         android:layout_height="20dp"
@@ -212,7 +212,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/login_tid_iv"
             android:layout_width="25dp"
             android:layout_height="25dp"
@@ -252,7 +252,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/login_phone_iv"
             android:layout_width="25dp"
             android:layout_height="25dp"
@@ -287,7 +287,7 @@
         android:layout_marginTop="30dp"
         app:layout_constraintTop_toBottomOf="@+id/login_phone_login_ly">
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/login_naver_iv"
             android:layout_width="40dp"
             android:layout_height="40dp"
@@ -299,7 +299,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/login_kakao_iv"/>
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/login_kakao_iv"
             android:layout_width="40dp"
             android:layout_height="40dp"
@@ -310,7 +310,7 @@
             app:layout_constraintStart_toEndOf="@+id/login_naver_iv"
             app:layout_constraintEnd_toStartOf="@+id/login_apple_iv"/>
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/login_apple_iv"
             android:layout_width="40dp"
             android:layout_height="40dp"
