--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/album_like_iv"
         android:layout_width="35dp"
         android:layout_height="35dp"
@@ -15,7 +15,7 @@
         app:layout_constraintEnd_toStartOf="@+id/album_more_iv"
         app:layout_constraintTop_toTopOf="@+id/album_more_iv" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/album_more_iv"
         android:layout_width="35dp"
         android:layout_height="35dp"
@@ -27,7 +27,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/album_lp_iv"
         android:layout_width="wrap_content"
         android:layout_height="180dp"
@@ -37,7 +37,7 @@
         app:layout_constraintStart_toStartOf="@+id/album_album_iv"
         app:layout_constraintTop_toTopOf="@+id/album_album_iv" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/album_back_iv"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -86,7 +86,7 @@
         app:layout_constraintStart_toStartOf="@+id/album_singer_name_tv"
         app:layout_constraintTop_toBottomOf="@+id/album_singer_name_tv" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/album_album_iv"
         android:layout_width="200dp"
         android:layout_height="200dp"
@@ -97,7 +97,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/album_music_title_info_tv" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageView"
         android:layout_width="40dp"
         android:layout_height="40dp"
