--- a/app/src/main/res/layout/fragment_banner.xml
+++ b/app/src/main/res/layout/fragment_banner.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/banner_image_iv"
         android:layout_width="match_parent"
         android:layout_height="100dp"
