--- a/app/src/main/res/layout/fragment_banner2.xml
+++ b/app/src/main/res/layout/fragment_banner2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/banner_image2_iv"
         android:layout_width="match_parent"
         android:layout_height="100dp"
