--- a/app/src/main/res/layout/fragment_song.xml
+++ b/app/src/main/res/layout/fragment_song.xml
@@ -25,12 +25,12 @@
             android:layout_height="wrap_content"
             android:text="내 취향 MIX"
             android:textColor="@color/black"
-            android:paddingStart="5dp"
+            android:paddingHorizontal="5dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/album_songs_toggle_off_iv"
             android:layout_width="50dp"
             android:layout_height="30dp"
@@ -39,7 +39,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/album_songs_toggle_on_iv"
             android:layout_width="50dp"
             android:layout_height="30dp"
@@ -60,7 +60,7 @@
         app:layout_constraintTop_toBottomOf="@+id/album_songs_layout"
         app:layout_constraintStart_toStartOf="parent">
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/album_songs_check_all_iv"
             android:layout_width="15dp"
             android:layout_height="15dp"
@@ -92,7 +92,7 @@
         app:layout_constraintTop_toTopOf="@+id/album_check_all_ly"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/album_listen_all_iv"
             android:layout_width="15dp"
             android:layout_height="15dp"
