--- a/app/src/main/res/layout/toast_like.xml
+++ b/app/src/main/res/layout/toast_like.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/ic_my_like_on"
