이용권 구매 창 생성

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -291,7 +291,7 @@
             android:id="@+id/login_naver_iv"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/naver_44"
+            android:src="@drawable/ic_naver"
             android:layout_marginEnd="10dp"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintTop_toTopOf="parent"
@@ -303,7 +303,7 @@
             android:id="@+id/login_kakao_iv"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/kakako_44"
+            android:src="@drawable/ic_kakao"
             android:layout_marginEnd="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -314,7 +314,7 @@
             android:id="@+id/login_apple_iv"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/apple_44"
+            android:src="@drawable/ic_apple"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/login_kakao_iv"
