--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_gray">#BDBDBD</color>
+    <color name="middle_gray">#8C8C8C</color>
 
     <color name="colorPrimary">#9cbee2</color>
     <color name="colorPrimaryDark">#062342</color>
@@ -20,6 +22,8 @@
     <color name="gray_color">#a8a8a8</color>
     <color name="song_player">#3f3fff</color>
     <color name="song_player_bg">#a8a8a8</color>
+
+    <color name="tab_select">#3F0099</color>
 
     <color name="form_error">#F11818</color>
 
