스크롤 할 때 나타나는 물결무늬 없애기

--- a/app/src/main/res/layout/fragment_look.xml
+++ b/app/src/main/res/layout/fragment_look.xml
@@ -115,8 +115,7 @@
         android:scrollbars="none"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/look_top_cl"
-        app:layout_constraintVertical_bias="1.0"
-        tools:layout_editor_absoluteX="16dp">
+        android:overScrollMode="never">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
